--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+ 
   <head>
 
     <meta charset="utf-8">
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Stylish Portfolio - Start Bootstrap Template</title>
+    <title>Tokademia</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -31,22 +31,22 @@
     <nav id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <li class="sidebar-brand">
-          <a class="js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+          <a class="js-scroll-trigger" href="#page-top">Tokademia</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#page-top">Home</a>
+          <a class="js-scroll-trigger" href="#page-top">Inicio</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#about">About</a>
+          <a class="js-scroll-trigger" href="#about">Página en construcción</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#services">Services</a>
+          <a class="js-scroll-trigger" href="https://github.com/Tokademia/Papel-Blanco/">Papel Blanco</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
+          <a class="js-scroll-trigger" href="https://t.me/Tokademia">Comunidad Tokademia</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#contact">Contact</a>
+          <a class="js-scroll-trigger" href="https://t.me/Ceo_Tokademia">Telegram CEO Tokademia</a>
         </li>
       </ul>
     </nav>
@@ -56,7 +56,7 @@
       <div class="container text-center my-auto">
         <h1 class="mb-1">Tokademia</h1>
         <h3 class="mb-5">
-          <em>Desarrollando plataformas educativas sustentadas en la tokenización del Blockchain</em>
+          <em>Desarrollando plataformas educativas sustentadas en la tokenización</em>
         </h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://github.com/Tokademia/Papel-Blanco/">Lee nuestro Papel Blanco</a>
       </div>
@@ -68,8 +68,8 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-            <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
+            <h2>PÁGINA EN CONSTRUCCIÓN, COMÚNICATE CON NOSOTROS SI DESEAS COLABORAR</h2>
+            <p class="lead mb-5">
               <a href="https://unsplash.com/">Unsplash</a>!</p>
             <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
           </div>
