--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h2>PÁGINA EN CONSTRUCCIÓN, COMÚNICATE CON NOSOTROS SI DESEAS COLABORAR</h2>
-            <p class="lead mb-5">
-              <a href="https://unsplash.com/">Unsplash</a>!</p>
-            <a class="btn btn-dark btn-xl js-scroll-trigger" href="https://docs.google.com/forms/d/15bIpwtSqLqNSSK_WgfXtkvh6DrGytgU_IsJCoGu4a3w">What We Offer</a>
+                        <a class="btn btn-dark btn-xl js-scroll-trigger" href="https://docs.google.com/forms/d/15bIpwtSqLqNSSK_WgfXtkvh6DrGytgU_IsJCoGu4a3w">Formulario</a>
           </div>
         </div>
       </div>
